src/objects/BookingGuest__c.object
<CustomObject>
    <description>Guest Name of Assigned Room</description>
    <fields>
        <fullName>ContactRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先責任者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>宿泊者名簿</relationshipLabel>
        <relationshipName>GuestContactRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DelegateFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>代表者</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GuestAutoNo__c</fullName>
        <displayFormat>BL-{0000000000}</displayFormat>
        <label>宿泊者番号</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>GuestName__c</fullName>
        <label>宿泊者名（漢字）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndexSubRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>予約インデックスSUB</label>
        <referenceTo>LeadIndex__c</referenceTo>
        <relationshipLabel>宿泊者名簿</relationshipLabel>
        <relationshipName>IndexSubRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RoomGroupNo__c</fullName>
        <description>部屋アサインする場合、１部屋の宿泊者識別用</description>
        <label>部屋グループ番号</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>お部屋</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>宿泊者名簿</relationshipLabel>
        <relationshipName>GuestRoomRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>性別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>男</fullName>
                </value>
                <value>
                    <fullName>女</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>宿泊者名簿</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>宿泊者名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>